# Versicherungsmanagment

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: classifier_agent.py  document_agent.py  guardrails.py  invoice_agent.py  qa_agent.py  recommendation_agent.py  web_search_tool.py
backend/app/api/: chat.py  documents.py  exports.py  insurances.py  invoices.py  products.py
backend/app/models/: database.py  enums.py  models.py
backend/app/scheduler/: notification_job.py
backend/app/schemas/: schemas.py
backend/app/services/: embedding_service.py  pushover_service.py  recommendation_service.py  storage_service.py  web_search_service.py
backend/tests/: conftest.py  test_api_integration.py  test_guardrails.py  test_notifications.py  test_ocr_service.py  test_recommendation.py  test_storage.py  test_vector_store.py  test_web_search.py
docs/: API_DOKUMENTATION.md  BACKEND_DOKUMENTATION.md  BEDIENUNGSANLEITUNG.md  FRONTEND_DOKUMENTATION.md  INSTALLATION_UND_BETRIEB.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  api.js  constants.js  main.js  utils.js
frontend/src/stores/: transfer.js
frontend/src/views/: Calendar.vue  Chat.vue  Dashboard.vue  Insurances.vue  Invoices.vue  Products.vue  Upload.vue
