[project]
name = "versicherungs-backend"
version = "0.1.0"
description = "Versicherungs-Assistent Backend (FastAPI + OpenAI Agents SDK)"
license = "AGPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "sqlalchemy==2.0.49",
    "alembic==1.18.4",
    "pydantic==2.13.3",
    "pydantic-settings==2.14.0",
    "python-multipart==0.0.26",
    "openai==2.32.0",
    "openai-agents==0.14.6",
    "numpy==2.4.4",
    "pymupdf==1.27.2.3",
    "pillow==12.2.0",
    "apscheduler==3.11.2",
    "httpx==0.28.1",
    "reportlab==4.4.10",
    "openpyxl==3.1.5",
    "python-dotenv==1.2.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "pytest-mock==3.14.0",
    "ruff==0.8.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S"]
ignore = ["S101", "B008"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
